getProductWithoutStock
